# ai-projects

img-checker/: README.md  app.py  pyproject.toml  requirements.txt
